# nlp_pdf

./: .gitignore  README.md  boilerplate.ipynb  config.py  env.example  pyproject.toml  requirements.txt  setup.py  test_imports.py
extracted/camelot_extraction/: extracted_table_1.csv  extracted_text.csv
extracted/table_extraction/: table_1.csv
extracted/text_extraction/: 1_text.txt  2_text.txt  CELRB_DIS_LB_03_TOL_20240906_CS_FULLSURVEY_text.txt  CELRB_DIS_LB_05_CUY_20240404_CS_FULLSURVEY_text.txt  CELRB_DIS_LB_08_BRC_20240807_CS_FULLSURVEY_text.txt  CELRC_DIS_BG_01_SMO_20240506_CS_SB_text.txt  CELRC_DIS_GB_01_GRB_20240716_CS_10_text.txt  CELRC_DIS_ST_01_GBY_20240409_CS_10_text.txt  CELRE_GR_01_HVN_20230314_CS_text.txt  CELRE_SM_09_BC1_20230622_CS_text.txt  CELRH_DIS_KA_HD_RCB_20240419_CS_0279_0309_SORT_text.txt  CELRH_DIS_OH_HD_BEL_20240913_CS_1671_1679_SORT_text.txt  CELRH_DIS_OH_HD_CAM_20240801_CS_4359_4362_SORT_text.txt  CELRL_DIS_OH_LD_CAI_20241008_CS_965_976_SORT_text.txt  CELRL_DIS_OH_LD_JTM_20240501_CS_805_813_SORT_text.txt  CELRL_DIS_OH_LD_NBG_20240509_CS_758_761_SORT_text.txt  CELRN_CR_ND_BL5_20220301_CS_103_104_SORT_text.txt  CELRN_DIS_TN_ND_KL7_20230411_CS_192_SORT_text.txt  CELRN_DIS_TN_ND_LWR_20230726_CS_15_SORT_text.txt  CELRP_DIS_MN_LP_ELZ_20240904_CS_3100_3600_text.txt  CELRP_DIS_MN_LP_ELZ_20240905_CS_2700_3100_text.txt  CELRP_DIS_MN_LP_ELZ_20240905_CS_NM_text.txt  CEMVK_DIS_LM_11_YBS_20240628_CS_5502_5470_text.txt  CEMVK_DIS_LM_13_OZE_20240530_CS_5770_5726_text.txt  CEMVM_DIS_LM_23_OSCX_20240909_CS_789_786_SORT_ACTUALDEPTHS_text.txt  CEMVN_MS_11_SM3X_20240925_CS_text.txt  CEMVN_SW_05_SWP_20240624_CS_B2B_text.txt  CEMVN_VSO_SW_04_SWPX_20241011_CS_text.txt  CEMVP_DIS_MN_SP_MN1_20240730_CS_0132_0137_text.txt  CEMVP_DIS_SC_SP_SC1_20240923_CS_0060_0068_text.txt  CEMVP_DIS_UM_SP_P10_20240729_CS_6190_6200_text.txt  CEMVR_DIS_IL_PE_MVR_20240917_CS_18021820_24C_text.txt  CEMVR_DIS_UM_14_MVR_20240917_CS_51555173_24B_text.txt  CEMVR_DIS_UM_22_MVR_20241001_CS_30423069_24E_text.txt  CEMVS_DIS_UM_SL_DIC_20240829_BD_1_text.txt  CEMVS_DIS_UM_SL_DIC_20241008_BD_1_text.txt  CEMVS_DIS_UM_SL_DIC_20241008_BD_2_text.txt  CENAB_DIS_BH_05_1FC_20240610_CS_02_text.txt  CENAB_DIS_MD_63_063_20240823_CS_text.txt  CENAB_DIS_MD_67_067_20240223_CS_text.txt  (+66 more)
pdf-extraction/: README.md  azure_doc_intel_extraction.py  camelot_extraction.py  colpali_extraction.py  geo_extraction.py  geometric_extraction.py  image_extraction.py  table_extraction.py  text_extraction.py  tika-config.xml  tika-test.py  tika_extraction.py
utils/: visualize_tables.py
(+19 files in other folders)
